--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ data/processed/valid/PRE-event/*
 data/processed/valid/POST-event/*
 data/processed/train/labels/*
 data/processed/valid/labels/*
+logs/*
 
 !data/Germany_Training/.gitkeep
 !data/Louisiana-East_Training/.gitkeep
@@ -19,3 +20,4 @@ data/processed/valid/labels/*
 !data/processed/valid/POST-event/.gitkeep
 !data/processed/train/labels/.gitkeep
 !data/processed/valid/labels/.gitkeep
+!logs/.gitkeep
